# qwen3-onpolicy-distillation

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_MULTI_CONTAINER.md  Dockerfile  EVALUATION_READY.md  MULTIPLE_ROLLOUTS.md  QUICKSTART.md  README.md  TRL_PIPELINE.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_training_trl.py
configs/: README.md  default.yaml  qwen3-1.5b-7b.yaml  qwen3-7b-14b.yaml
docker/: Dockerfile.sglang  Dockerfile.training  Dockerfile.vllm
evaluation/: README.md  benchmark_gsm8k.py  check_kl_concern.py  diagnose_training.py  quick_eval.py  validate_kl_precision.py
scripts/: validate_models.py
src/qwen3_distill/: __init__.py  pipeline.py
src/qwen3_distill/generation/: __init__.py  generator.py  local_generator.py
src/qwen3_distill/scoring/: __init__.py  scorer.py
src/qwen3_distill/training/: __init__.py  reverse_kl_trainer.py  sft_distill_trainer.py  trl_trainer.py
src/qwen3_distill/utils/: __init__.py  config.py  gpu.py  models.py
tests/: test_generation.py  test_trl_trainer.py
